# k3m-marketplace

./: .agnix.toml  .gitignore  README.md  registry.yaml
.claude/: CLAUDE.md  settings.json
.claude-plugin/: marketplace.json
.claude/commands/: adr.md  (+5 more)
.firecrawl/: agent-teams.md  context-window.md  data-usage.md  env-vars.md  hooks.md  settings.md  sub-agents.md
docs/: architecture.md  cheatsheet-agent.md  cheatsheet-commands.md  cheatsheet-hooks.md  cheatsheet-lsp.md  cheatsheet-mcp.md  cheatsheet-output-styles.md  cheatsheet-plugin.md  cheatsheet-skill.md  file-roles-and-dependencies.md  undocumented-features.md
plugins/personal-finance/: pyproject.toml
plugins/personal-finance/.claude-plugin/: plugin.json
plugins/personal-finance/scripts/: audit.py  db.py  export_db.py  extract_invoice.py  generate_qr.py  match_engine.py  parse_csv.py  parse_mt940.py  scan_inbox.py
plugins/personal-finance/skills/extract-invoices/: SKILL.md
plugins/personal-finance/skills/generate-qr/: SKILL.md
plugins/personal-finance/skills/import-statements/: SKILL.md
plugins/personal-finance/skills/match-payments/: SKILL.md
plugins/personal-finance/skills/pipeline/: SKILL.md
plugins/personal-finance/skills/scan-inbox/: SKILL.md
plugins/personal-finance/skills/view-data/: SKILL.md
plugins/personal-finance/tests/: conftest.py  test_db.py  test_extract_invoice.py  test_generate_qr.py  test_integration.py  test_match_engine.py  test_parse_csv.py  test_parse_mt940.py
plugins/personal-finance/tests/fixtures/: sample.mt940  sample_abn.csv  sample_bunq.csv  sample_ing.csv
(+138 files in other folders)
