[project]
name = "personal-finance"
version = "0.1.0"
description = "Personal invoice pipeline scripts"
requires-python = ">=3.11"
dependencies = [
    "mt-940>=4.2",
    "pdfplumber>=0.11",
    "beautifulsoup4>=4.12",
    "segno>=1.6",
    "datasette>=0.65",
    "jinja2>=3.1",
    "chardet>=5.2",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
